时间：2016-9-10 编辑者：汪志文 在会议预定系统中的documentInfo.jsp页面中的下载按钮的右边添加一个删除按钮，他的作用是：1、将上传到本地文件夹C:\conference\file\upload中的对应文件删除。2、将数据库file表中的对应的文件信息删除。3、利用ajax技术能对部分页面刷新的功能，将页面显示的文件信息刷新。

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -51,6 +51,15 @@
             com.zhang.file.FileDownloadServlet
         </servlet-class>
   </servlet>
+  
+  
+  <servlet>
+    <servlet-name>FileDeleteServlet</servlet-name>
+    <servlet-class>
+            com.zhang.file.FileDeleteServlet
+        </servlet-class>
+  </servlet>
+  
   <servlet>
     <servlet-name>GetRoomInfoServlet</servlet-name>
     <servlet-class>
@@ -101,6 +110,10 @@
   <servlet-mapping>
     <servlet-name>FileDownloadServlet</servlet-name>
     <url-pattern>/FileDownloadServlet</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>FileDeleteServlet</servlet-name>
+    <url-pattern>/FileDeleteServlet</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>GetRoomInfoServlet</servlet-name>
